# TOOLS_PY

./: .gitignore  DEPLOY.bat.save  PROJECT.ini  PROJECTS_LYR_TOOLS_PY-TOOLS_PY.ffs_batch  PROJECTS_LYR_TOOLS_PY-TOOLS_PY.ffs_gui  Pipfile  README.md  REPO.ini  TOOLS_PY_config  lyrgit_create_exists_TOOLS_PY.bat  lyrgit_create_new_TOOLS_PY.bat  pyproject.toml  setup.cfg  setup.py  setup_02.py
!/: setup_01.py  setup_03.py
BAT/: CLOCK.bat  CLOCK_PY.bat  COPYFILE_py.bat  CountdownTimer.bat  CreateLNK.bat  CryptoTEXT2.bat  CryptoTEXT3.bat  CryptoTEXT4.bat  DirectorySync.bat  EXIFread.bat  EmailAutomation.bat  GULLIVER.bat  GetINI1_py.bat  GetINI2_py.bat  GetInfoIP.bat  GetMessage_docker.bat  GetMessage_pyrogram.bat  GetMessage_stop.bat  GetMessage_telethon.bat  ImageToText.bat  LISTDIR_py.bat  MP4toMP3.bat  Monitor.bat  MonitorPS.bat  Monitoring.bat  PATTERN_PY.bat  PasswordGenerator2.bat  PasswordGenerator3.bat  PasswordGenerator4.bat  PhotoSort.bat  QRCode.bat  SendGmail.bat  SetINI1_PY.bat  SetINI2_PY.bat  TimeTracker.bat  activate.bat  ftFormatTXT.bat  ftFormatTXTdefault.bat  ipdrone.bat  speedTest1.bat
PY/: LUConsole.py  LUConst.py  LUDateTime.py  LUDecode.py  LUDecotators.py  LUDict.py  LUDoc.py  LUDocumentation.py  LUErrors.py  LUFile.py  LUFileUtils.py  LULog.py  LUNetwork.py  LUNumUtils.py  LUObjects.py  LUObjectsYT.py  LUObjectsYouTube_help.py  LUObjectsYoutube.py  LUParserARG.py  LUParserINI.py  LUParserREG.py  LUProc.py  LUQThread.py  LUQTimer.py  LUSheduler.py  LUStrDecode.py  LUStrUtils.py  LUStrings.py  LUSupport.py  LUTemplate.py  LUThread.py  LUTimer.py  (+9 more)
(+219 files in other folders)
