[project]
name = "lyrpy"
version = "1.0.0.0"
authors = [
  { name="lisitsinyr", email="lisitsinyr@gmail.com" },
]
description = "lyrpy"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lisitsinyr/TOOLS_PY"
Issues = "https://github.com/lisitsinyr/TOOLS_PY/issues"
